--- a/app/templates/crm_detalhe_atendimento.html
+++ b/app/templates/crm_detalhe_atendimento.html
@@ -157,10 +157,10 @@
                             </span>
                             <button class="btn btn-secondary btn-sm"
                                 type="button"
-                                onclick="abrirModalPDS('{{ pds_info.q1_demanda }}', '{{ pds_info.q2_nota_atendimento }}', '{{ pds_info.q3_nota_recomendacao }}', event)"
+                                onclick="abrirModalPDS('{{ pds_info.q1_demanda_atendida }}', '{{ pds_info.q2_nota_atendimento }}', event)"
                                 title="Ver Respostas da Pesquisa">
-                            <i class="fas fa-eye"></i>
-                        </button>
+                                <i class="fas fa-eye"></i>
+                            </button>
                         </div>
                     {% else %}
 
