--- a/app/templates/historico.html
+++ b/app/templates/historico.html
@@ -72,11 +72,14 @@
                 </div>
             </div>
 
-            <div class="form-row" style="justify-content: flex-end; margin-top: 20px; margin-bottom: 0;">
-                <div style="display: flex; gap: 10px;">
-                    <a href="{{ url_for('historico') }}" class="btn btn-secondary">Limpar Filtros</a>
-                    <button type="submit" class="btn btn-primary">Buscar</button>
-                </div>
+            <div class="form-row" style="justify-content: flex-end;">
+                    <a href="{{ url_for('historico') }}" class="btn-limpar">
+                    <i class="fas fa-undo"></i> Limpar Filtros
+                </a>
+
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-search" style="margin-right: 5px;"></i> Buscar
+                </button>
             </div>
         </form>
     </div>
